--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -4,8 +4,8 @@
 @theme {
     /* colors */
     --color-primary-black: #1a1a1a ;
-    --color-primary-gray: #7a7a7a ;
-    --color-secondary-gray: #9e9e9e ;
+    --color-primary-gray: #F9FAFB ;
+    --color-secondary-gray: #EEEEEE ;
     --color-primary-white: #ffffff ;
     --color-primary-blue-600: #0C5095 ;
     --color-primary-blue-500: #0A5BE9 ;
