--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -10,7 +10,7 @@
     --color-primary-blue-600: #0C5095 ;
     --color-primary-blue-500: #0A5BE9 ;
     --color-primary-blue-400: #0A5BE9 ;
-    --color-primary-blue-300: #69BBE6 ;
+    --color-primary-blue-300: #6C91D3 ;
     --color-primary-blue-200: #9DDDF6 ;
     --color-primary-blue-100: #DEF6FF ;
   
